# cylestio-monitor

./: .cursor.rules  .cursorignore  .cursorrules  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  SECURITY.md  clean_and_deploy_docs.sh  cleanup_tests.sh  compatibility.md  conftest.py  demo_config.py  demo_modify_config.py  deploy_docs.sh  force_deploy_docs.sh  index.md  mkdocs.yml  openai_example.json  pyproject.toml  pytest.ini  setup_dev.sh  suppression.xml  test_api_demo.py  test_email_vs_ssn.py  test_monitor_finish.py  test_monitor_finish_integration.py  verify_hooks.sh
.github/: CICD.md
PR_NOTES/: http_rce_detection.md
demo/: build_docs.sh  generate_demo_data.sh  run_demo.sh
docs/: README.md  compatibility.md  custom-integrations.md  index.md  monitoring_channels.md  telemetry_schema.md  troubleshooting.md
docs-old/: index.md
examples/: DEBUG_LOGGING.md  README.md  anthropic_enhanced_monitoring.py  debug_logging_example.py  debug_test.py  mcp_example.py  multi_framework_monitoring.py  openai_example.py  relational_schema_example.py  security_pattern_matching.py  security_pattern_matching_with_masking.py  simple_anthropic.py  simple_langchain_test.py  test_api_key_pattern.py
scripts/: generate_security_report.py  migrate_to_utc_timestamps.py
sdk-reference/: database.md
test_run/: rag.py
tests/: TEST_DOCUMENTATION.md  __init__.py  check_imports.py  ci_check_installation.py  ci_setup.py  ci_verify.py  conftest.py  pytest.ini  run_tests.py  sitecustomize.py  test_anthropic_enhanced.py  test_api_client.py  test_api_client_unit.py  test_base_tool_patcher.py  test_config_manager.py  (+27 more)
(+172 files in other folders)
